@@ -1,3 +1,13 @@
+2001-05-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinKey.c (TkpSetKeycodeAndState): removed old debug info
+
+2001-05-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinX.c: moved the initialization of tkPlatformId from
+	TkWinXInit to TkWinGetPlatformId because static builds could call
+	it before it was initialized. [Bug #427278]
+
 2001-05-28  Peter Spjuth  <peter.spjuth@space.se>
 
 	* generic/tkFrame.c:
